# Geopython

./: .gitignore  LICENSE.txt  README.md  airbnb.ipynb  bikepath.ipynb  circles.ipynb  contour.ipynb  convert.ipynb  convert_folium.ipynb  geographically_weighted_regression.ipynb  geopandas_example.ipynb  geopandas_simple.ipynb  isochrone.ipynb  network_travel_times.ipynb  plaques_geopandas.ipynb  pyproject.toml  requirements.txt  ward_map.html
.github/: dependabot.yml
data/: LondonData.csv  London_outline_simple.dbf  London_outline_simple.sbn  London_outline_simple.sbx  London_outline_simple.shp  London_outline_simple.shp.xml  London_outline_simple.shx  bike_stations.xml  boroughs.geojson  data.json  journey_times.csv  london_outline_simple_new.dbf  london_outline_simple_new.shp  london_outline_simple_new.shx  london_wards.dbf  london_wards.shp  london_wards.shx  melted.pickle  nodes_london.csv  nodes_london.csv.bak  stations_travel_time.csv  stations_travel_time_valhalla.csv  thames.dbf  thames.sbn  thames.sbx  thames.shp  thames.shp.xml  thames.shx  thames_wgs84.dbf  thames_wgs84.shp  thames_wgs84.shx
data/imd_joined/: LSOA_2011_IMD.dbf  LSOA_2011_IMD.prj  LSOA_2011_IMD.shp  LSOA_2011_IMD.shx
data/listings/: listings.shp  listings.shx
util/: download_natural_earth.py  kernel_comparison_plot.py  refresh_bike_stations.py
