[project]
name = "geopython"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.1",
    "httpx>=0.28.1",
    "jupyterlab>=4.5.0",
    "libpysal>=4.13.0",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.8",
    "mgwr>=2.2.1",
    "numpy>=2.3.5",
    "pillow>=12.0.0",
    "pysal>=25.7",
    "scipy>=1.16.3",
    "shapely>=2.1.2",
    "spglm>=1.1.0",
    "spreg>=1.8.4",
    "statsmodels>=0.14.6",
]
