[project]
name = "geopython"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.3",
    "httpx>=0.28.1",
    "ipywidgets>=8.1.8",
    "jupyterlab>=4.5.7",
    "libpysal>=4.14.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.9",
    "matplotlib-scalebar>=0.9.0",
    "mgwr>=2.2.1",
    "networkx>=3.6.1",
    "numpy>=2.4.6",
    "osmnx>=2.1.0",
    "pillow>=12.2.0",
    "pysal>=26.1",
    "scipy>=1.17.1",
    "shapely>=2.1.2",
    "spglm>=1.1.0",
    "spreg>=1.8.4",
    "statsmodels>=0.14.6",
]
